Standardized page width. Simplified footer. Changed nav-item font sizes. Formatted footer button to look like a button. Altered landing page text content. Fixed landing page first image layout bug. Updated contact form to contact Roy's work email. Text-centered about us page.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -19,15 +19,51 @@ body {
 .main-container {
   width: 100%;
   max-width: 800px;
-}
-
-.top-gap {
   margin-top: 80px;
 }
 
 .sticky-top {
   position: fixed;
   width: 100vw;
+}
+
+.limit-width {
+  width: 100%;
+  max-width: 800px;
+}
+
+.pad-top {
+  margin-top: 100px;
+}
+
+.text-right {
+  text-align: right;
+}
+
+/* SECTION SPECIFIC LAYOUT AND SPACING */
+
+  /* NAVBAR */
+.navbar {
+  opacity: .95;
+}
+
+.nav {
+  text-align: right;
+  padding-right: 10%;
+}
+
+  /* HOME PAGE */
+.landing-div {
+  background-image: url('./images/wood-bg.jpeg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+ 
+  padding: 30px;
+
+  text-align: right;
+  padding-left: 40%;
+  padding-right: 10%;
 }
 
 .shadow {
@@ -40,7 +76,7 @@ body {
 }
 
 .bring-forward {
-  z-index: 20000;
+  z-index: 1000;
 }
 
 .projects, .services {
@@ -60,44 +96,6 @@ body {
   overflow: hidden;
 }
 
-.limit-width {
-  width: 100%;
-  max-width: 800px;
-}
-
-.color-invert {
-  color: white;
-}
-
-.bg-white {
-  background-color: white;
-}
-
-.pad-top {
-  margin-top: 100px;
-}
-
-/* SECTION SPECIFIC LAYOUT AND SPACING */
-
-  /* NAVBAR */
-.navbar {
-  opacity: .95;
-}
-
-  /* HOME PAGE */
-.landing-div {
-  background-image: url('./images/wood-bg.jpeg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  width: 100%;
-  height: 200px;
-  padding: 30px;
-  text-align: right;
-  padding-left: 40%;
-  padding-right: 10%;
-}
-
   /* PAST PROJECTS */
 
   /* TESTIMONIES */
@@ -107,18 +105,28 @@ body {
   /* CONTACT US */
 
   /* FOOTER */
-footer, .footer, .footer h3 {
+footer {
   margin-top: 20px;
   margin-bottom: 0;
   margin-block-end: 0;
   padding-bottom: 0;
 }
 
-.footer {
+footer {
   width: 100%;
   background-color: rgb(240, 240, 240);
 }
 
 /* FONTS AND COLORS */
+.color-invert {
+  color: white;
+}
 
+.bg-white {
+  background-color: white;
+}
+
+.nav-link {
+  font-size: 1.5em;
+}
 
